# anyplotlib

./: .gitignore  AGENTS.md  CHANGELOG.rst  LARGE_IMAGE_WEBGPU_PLAN.md  LICENSE  Makefile  ORIX_BACKEND_PLAN.md  README.md  RELEASE_NOTES.md  RELEASE_PLAN.md  WEBGPU_PLAN.md  _test_scraper.py  index.html  make.bat  pyproject.toml  switcher.json  test_figure.py  test_pcolormesh.py  test_sphinx_anywidget.py
.github/workflows/: benchmarks.yml  ci.yml  docs.yml  release.yml  (+2 more)
Examples/: README.rst  plot_3d.py  plot_bar.py  plot_image2d.py  plot_line_styles.py  plot_pcolormesh.py  plot_spectra1d.py
anyplotlib/: FIGURE_ESM.md  __init__.py  _base_plot.py  _binary_frame.py  _electron.py  _repr_utils.py  _utils.py  callbacks.py  conftest.py  embed.py  figure.py  figure_esm.js  figure_plots.py  markers.py  widgets.py
dev/: .buildinfo  benchmarking.html  embedding.html  events.html  genindex.html  getting_started.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
docs/: _sg_html_scraper.py  conf.py  events.rst  getting_started.rst  index.rst  performance.rst
tests/: _png_utils.py  conftest.py  test_bar.py  test_benchmarks.py  test_benchmarks_py.py  test_events.py  test_gridspec.py  test_imshow_extras.py  test_imshow_params.py  test_inset.py  test_inset_visual.py  test_interaction.py  test_panel_alignment.py  test_plot1d_extras.py  test_plot1d_linestyle.py  test_plot2d_polish.py  test_plotbar_extras.py  test_pyodide_e2e.py  test_scraper.py  test_sphinx_anywidget.py  test_visual.py  test_widgets.py
upcoming_changes/: +arrow-widget-show-handles.new_feature.rst  +batch_perf.new_feature.rst  +dblclick_1d_datacoords.new_feature.rst  +double_click_targets.new_feature.rst  +edit-mode-resize-swap.new_feature.rst  +embedding.new_feature.rst  +export_png_3d.bugfix.rst  +figure-edit-chrome.new_feature.rst  +geom_channel.new_feature.rst  +gpu_draw_self_heal.bugfix.rst  +indicate_point.new_feature.rst  +inset_drag_resize.new_feature.rst  +inset_no_title_bar.new_feature.rst  +ipf_3d.new_feature.rst  +ipf_density_raster.new_feature.rst  +label_tex.new_feature.rst  +layer_tint.new_feature.rst  +legend_fontsize.new_feature.rst  +plane_snapback.bugfix.rst  +pyodide_dispatch.bugfix.rst  +touch.new_feature.rst  +voxel_gpu_threshold.bugfix.rst  +voxel_perf.new_feature.rst  +voxel_slice_highlight.bugfix.rst  +voxels_planes.new_feature.rst  +webgpu.new_feature.rst  +widget_linewidth.new_feature.rst  11.maintenance.rst  6.new_feature.rst  9.new_feature.rst  README.rst  binary_token_cache_freeze.bugfix.rst  gpu_pan_v_mirror.bugfix.rst  lazy_data_cast.bugfix.rst  plotxy.new_feature.rst  raw_pixel_transport.bugfix.rst  stale_overview_zoom_out.bugfix.rst  webgpu_2d_image.new_feature.rst  zoom_view_write.bugfix.rst
v0.1.0/: .buildinfo  benchmarking.html  embedding.html  events.html  genindex.html  getting_started.html  index.html  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
v0.1.0b1/: .buildinfo  benchmarking.html  embedding.html  events.html  genindex.html  getting_started.html  index.html  objects.inv  py-modindex.html  search.html  sg_execution_times.html
v0.2.0/: .buildinfo  benchmarking.html  embedding.html  events.html  genindex.html  getting_started.html  index.html  py-modindex.html  search.html  sg_execution_times.html
v0.3.0/: .buildinfo  benchmarking.html  embedding.html  events.html  genindex.html  getting_started.html  index.html  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
v0.3.0b1/: .buildinfo  benchmarking.html  embedding.html  events.html  genindex.html  getting_started.html  index.html  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
v0.4.0/: .buildinfo  benchmarking.html  embedding.html  events.html  genindex.html  getting_started.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
viewer/: __init__.py  _repr_utils.py  figure.py  figure_esm.js  figure_plots.py  markers.py
(+2181 files in other folders)
