[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["anyplotlib"]

[project]
name = "anyplotlib"
version = "0.1.0"
description = "A plotting library using python, javascript and anywidget for performant in browser plotting."
requires-python = ">=3.10"
dependencies = [
    "anywidget>=0.9.21",
    "colorcet>=3.0",
    "jupyterlab>=4.5.5",
    "numpy>=2.4.2",
    "pytest>=9.0.2",
    "traitlets>=5.14.3",
]

[project.optional-dependencies]
docs = [
    "sphinx>=8.0",
    "pydata-sphinx-theme>=0.16",
    "sphinx-gallery>=0.18",
    "pillow>=10.0",
    "matplotlib>=3.9",
]

[dependency-groups]
dev = [
    "playwright>=1.58.0",
]


