[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["anyplotlib"]

[project]
name = "anyplotlib"
version = "0.1.0"
description = "A plotting library using python, javascript and anywidget for performant in browser plotting."
requires-python = ">=3.10"
dependencies = [
    "anywidget>=0.9.0",
    "colorcet>=3.0",
    "numpy>=2.0.0",
    "traitlets>=5.0.0",
]

[project.optional-dependencies]
docs = [
    "sphinx>=8.0",
    "pydata-sphinx-theme>=0.16",
    "sphinx-gallery>=0.18",
    "pillow>=10.0",
    "matplotlib>=3.7",
]
jupyter = [
    "jupyterlab>=4.5.5",
]

[dependency-groups]
dev = [
    "playwright>=1.58.0",
    "pytest>=9.0.2",
]


