[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["anyplotlib"]

[project]
name = "anyplotlib"
version = "0.1.0"
description = "A plotting library using python, javascript and anywidget for performant in browser plotting."
requires-python = ">=3.10"
dependencies = [
    "anywidget>=0.9.0",
    "colorcet>=3.0",
    "numpy>=2.0.0",
    "traitlets>=5.0.0",
]

[project.optional-dependencies]
docs = [
    "sphinx>=8.0",
    "pydata-sphinx-theme>=0.16",
    "sphinx-design>=0.6",
    "sphinx-gallery>=0.18",
    "pillow>=10.0",
    "matplotlib>=3.7",
    "playwright>=1.58.0",
    "plotly>=5.0",
    "bokeh>=3.0",
    "scipy>=1.15.3",
]
jupyter = [
    "jupyterlab>=4.5.5",
]

[dependency-groups]
dev = [
    "docutils>=0.19",
    "playwright>=1.58.0",
    "pytest>=9.0.2",
    "pytest-cov>=5.0.0",
    "scipy>=1.15.3",
    "sphinx>=8.0",
    "towncrier>=24.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=anyplotlib --cov-report=xml --cov-report=term-missing"

[tool.coverage.run]
source = ["anyplotlib"]
omit = ["tests/*", "Examples/*", "docs/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

# ---------------------------------------------------------------------------
# Changelog management (towncrier)
# ---------------------------------------------------------------------------
[tool.towncrier]
package          = "anyplotlib"
package_dir      = "anyplotlib"
directory        = "upcoming_changes"
filename         = "CHANGELOG.rst"
start_string     = ".. towncrier release notes start\n"
issue_format     = "`#{issue} <https://github.com/CSSFrancis/anyplotlib/pull/{issue}>`_"
title_format     = "{version} ({project_date})"
underlines       = ["=", "-", "~"]

[[tool.towncrier.type]]
directory    = "new_feature"
name         = "New Features"
showcontent  = true

[[tool.towncrier.type]]
directory    = "bugfix"
name         = "Bug Fixes"
showcontent  = true

[[tool.towncrier.type]]
directory    = "deprecation"
name         = "Deprecations"
showcontent  = true

[[tool.towncrier.type]]
directory    = "removal"
name         = "Removals"
showcontent  = true

[[tool.towncrier.type]]
directory    = "doc"
name         = "Documentation"
showcontent  = true

[[tool.towncrier.type]]
directory    = "maintenance"
name         = "Maintenance"
showcontent  = true


